--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@tanstack/react-query": "^5.32.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "@types/send": "^1.2.1",
+    "@types/serve-static": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
