--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "exceljs": "^4.4.0",
     "firebase": "^10.11.0",
     "firebase-admin": "^12.1.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.372.0",
     "next": "14.2.0",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
+    "@types/qrcode": "^1.5.6",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.0",
