--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-query": "^5.90.8",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@types/send": "^1.2.1",
@@ -33,11 +34,14 @@
     "lucide-react": "^0.372.0",
     "next": "14.2.0",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.51.0",
-    "recharts": "^2.12.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^2.6.0",
     "typescript": "^5.4.0",
     "zod": "^3.23.0"
